[workspace]
members = [
    "mesh-portal",
    "mesh-binder",
    "mesh-artifact-api",
    "mesh-portal-api-client",
    "mesh-portal-api-server",
    "mesh-portal-tcp-common",
    "mesh-portal-tcp-client",
    "mesh-portal-tcp-server",
    "mesh-portal-api-test",
    "mesh-portal-versions",
    "cosmic-portal-cli",
    "cosmic-portal-cli-exe",
    "cosmic-macros"
]

