[package]
name = "cosmic-locality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-macros = { path="../cosmic-macros"}
mesh-portal-versions = { path="../mesh-portal-versions"}
cosmic-lanes = { path="../cosmic-lanes"}
anyhow = "1.0.44"
dashmap = "4.0.2"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version="1.0.69", features=['derive','rc'] }