[package]
name = "cosmic-portal-cli-exe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-nom= { path="../cosmic-nom"}
mesh-portal= { path="../mesh-portal"}
mesh-portal-versions = { path="../mesh-portal-versions"}
