[package]
name = "mesh-portal-api-server"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage ="http://starlane.io/"
readme="README.md"
repository = "https://github.com/mechtronium/mesh-portal"
description = "A server library for the Resource Mesh Portal API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
mesh-portal-serde = { path = "../mesh-portal-serde", version= "0.0.1"}
mesh-portal-api = { path = "../mesh-portal-api", version= "0.0.1"}
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
futures = "0.3.13"
anyhow = "1.0.44"

