[package]
name = "mesh-portal-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mesh-portal-serde = { path = "../mesh-portal-serde", version= "0.0.1"}
mesh-portal-api = { path = "../mesh-portal-api", version= "0.0.1"}
mesh-portal-api-client = { path = "../mesh-portal-api-client", version= "0.0.1"}
mesh-portal-api-server = { path = "../mesh-portal-api-server", version= "0.0.1"}
mesh-portal-tcp-common = { path = "../mesh-portal-tcp-common", version= "0.0.1"}
mesh-portal-tcp-server = { path = "../mesh-portal-tcp-server", version= "0.0.1"}
mesh-portal-tcp-client = { path = "../mesh-portal-tcp-client", version= "0.0.1"}
tokio = { version = "1.15.0", features = ["full"] }
bincode = "1.3.3"

async-trait = "0.1.48"
anyhow = "1.0.44"

