[package]
name = "resource-mesh-portal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
mesh-portal-serde = { path = "../mesh-portal-serde", version= "0.0.1"}
