[package]
name = "mesh-portal-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
mesh-portal-serde = { path = "../mesh-portal-serde", version= "0.0.1"}
anyhow = "1.0.44"
serde = { version="1.0.69", features=['derive','rc'] }
