[package]
name = "mesh-portal-bind"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage ="http://starlane.io/"
readme="README.md"
repository = "https://github.com/mechtronium/mesh-portal"
description = "binding parsing and configuration for mesh portals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
nom-supreme = "0.6.0"
anyhow = "1.0.44"

strum = "0.21.0"
strum_macros = "0.21.1"

serde = { version="1.0.69", features=['derive','rc'] }
bincode = "1.3.3"
