[package]
name = "mesh-portal-serde"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage ="http://starlane.io/"
readme="README.md"
repository = "https://github.com/mechtronium/mesh-portal"
description = "The raw data types for mesh-portal-api serde."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version="1.0.69", features=['derive','rc'] }
strum = "0.21.0"
strum_macros = "0.21.1"
nom = "7"
nom-supreme = "0.6.0"
bincode = "1.3.3"
semver = "0.11.0"

mesh-portal-versions= { path = "../mesh-portal-versions", version= "0.0.1"}
#tailcall = "0.1.6"
