[package]
name = "mesh-portal-tcp-common"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mesh-portal = { path = "../mesh-portal", version= "0.0.1"}
anyhow = "1.0.44"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.48"
