[package]
name = "mesh-portal-tcp-common"
version = "0.2.0-rc1"
edition = "2021"
description = "Common code shared by all mesh-portal-tcp-api-* crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mesh-portal = "0.2.0-rc1"
anyhow = "1.0.44"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.48"
