[package]
name = "mesh-portal-tcp-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mesh-portal-serde = { path = "../mesh-portal-serde", version= "0.0.1"}
mesh-portal-api= { path = "../mesh-portal-api", version= "0.0.1"}
mesh-portal-api-server = { path = "../mesh-portal-api-server", version= "0.0.1"}
mesh-portal-tcp-common = { path = "../mesh-portal-tcp-common", version= "0.0.1"}
anyhow = "1.0.44"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.48"
strum = "0.21.0"
strum_macros = "0.21.1"
